--- a/docs/release/trg-10/trg-10-04.mdx
+++ b/docs/release/trg-10/trg-10-04.mdx
@@ -36,5 +36,5 @@ graph LR
 ## Graduation Approval
 
 - The PR is merged and in the release notes is stated that the ticket got graduated.
-- The Graduation data is added to the [KIT master data](./kit-master-data.md) at the `graduationDate` field in the `maturity` section.
+- The Graduation data is added to the [KIT master data](https://eclipse-tractusx.github.io/documentation/kit-master-data-overview) at the `graduationDate` field in the `maturity` section.
 - The KIT shall remain in the graduated state unless a deprecation process is started - see [TRG 10.05 - KIT Deprecation Process](./trg-10-05.mdx)
