--- a/docs/release/trg-10/trg-10-03.mdx
+++ b/docs/release/trg-10/trg-10-03.mdx
@@ -12,6 +12,8 @@ import TrendingUpIcon from '@mui/icons-material/TrendingUp';
 import CheckCircleIcon from '@mui/icons-material/CheckCircle';
 import EditIcon from '@mui/icons-material/Edit';
 import VisibilityIcon from '@mui/icons-material/Visibility';
+import ArtifactRequirementsTable from '@site/src/components/2.0/ArtifactRequirementsTable';
+import { artifactRequirementsData } from '@site/data/kitArtifactRequirementsData';
 
 
 | Status     | Created      | Post-History                           |
@@ -59,35 +61,10 @@ graph TD
 
 This section provides an overview of required artifacts for each maturity level and incubating sub-state. For detailed examples and specifications, please refer to [TRG 10.02 - KIT Content Structure](./trg-10-02.mdx).
 
-**Legend**:
-
-- <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981', verticalAlign: 'middle' }} /> Mandatory
-- <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280', verticalAlign: 'middle' }} />* Optional/Recommended
-- <EditIcon sx={{ fontSize: 14, color: '#f59e0b', verticalAlign: 'middle' }} /> In Development
-- <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6', verticalAlign: 'middle' }} /> Under Review
-
 ### Artifact Requirements by Maturity Level
 
-| Artifact / Stage | Sandbox | Incubating Draft | Incubating In Progress | Incubating In Review | Graduated | Additional Info |
-|---|---|---|---|---|---|---|
-| Vision / Mission | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | Core foundation document |
-| Business Value(s) | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | May not be relevant for Network Services |
-| Use Case / Domain explanation | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | May not be relevant for Network Services |
-| Notice | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | Legal and compliance notice |
-| Changelog | | <EditIcon sx={{ fontSize: 14, color: '#f59e0b' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | Version history and updates |
-| Standards | | <EditIcon sx={{ fontSize: 14, color: '#f59e0b' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | Industry standards compliance |
-| API-Specification / Protocols | | <EditIcon sx={{ fontSize: 14, color: '#f59e0b' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | Technical interface definitions |
-| Logic / Schema | | <EditIcon sx={{ fontSize: 14, color: '#f59e0b' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | May not be relevant for Network Services |
-| Documentation | | <EditIcon sx={{ fontSize: 14, color: '#f59e0b' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | Complete technical documentation |
-| Architecture | | <EditIcon sx={{ fontSize: 14, color: '#f59e0b' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | System design and architecture |
-| Quick Setup Guide | | <EditIcon sx={{ fontSize: 14, color: '#f59e0b' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | Exception: not needed without reference implementation |
-| Semantic Models | | | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | May not be relevant for Network Services |
-| Business Processes | | | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | May not be relevant for Network Services |
-| Tutorials / Videos | | | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | Educational content |
-| Sample Data | | | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | Example datasets |
-| Reference Implementation | | | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | Working code examples |
-| Whitepaper | | | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | <RateReviewIcon sx={{ fontSize: 14, color: '#8b5cf6' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | Research and analysis document |
-| Code Owner | | | <CheckCircleIcon sx={{ fontSize: 14, color: '#6b7280' }} />* | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | <CheckCircleIcon sx={{ fontSize: 14, color: '#10b981' }} /> | Required for graduation - see [TRG 10.02 - KIT Content Structure](./trg-10-02.mdx) |
+<ArtifactRequirementsTable data={artifactRequirementsData} />
+
 
 ## Further Specifications
 
